# scraping

./: pyproject.toml  requirements.txt
college_scraper_agent/: .gitignore  README.md  debug_scrape.py  main.py  models.py  pyproject.toml  requirements.txt  test_demo.py
college_scraper_agent/agents/: college_agent.py
college_scraper_agent/config/: config.example.env
college_scraper_agent/scrapers/: college_scraper.py  directory_scraper.py  google_search.py
college_scraper_agent/ui/: flask_app.py  streamlit_app.py
college_scraper_agent/ui/static/: script.js  style.css
college_scraper_agent/ui/templates/: index.html
college_scraper_agent/utils/: data_cleaner.py  exporter.py  logger.py
output/: colleges_data.csv  colleges_data.json  colleges_data.xlsx
