[tool.vercel]
entrypoint = "ui.flask_app:app"

[project]
name = "college-scraper-agent"
version = "0.0.1"
description = "College scraper Flask app"
dependencies = [
	"requests==2.31.0",
	"beautifulsoup4==4.12.3",
	"lxml==5.1.0",
	"selenium==4.18.1",
	"playwright==1.42.0",
	"httpx==0.27.0",
	"openai==1.12.0",
	"groq==0.4.2",
	"langchain==0.1.9",
	"langchain-community==0.0.24",
	"langchain-openai==0.0.8",
	"pandas==2.2.1",
	"openpyxl==3.1.2",
	"pydantic==2.6.3",
	"serpapi==0.1.5",
	"google-search-results==2.4.2",
	"python-dotenv==1.0.1",
	"rich==13.7.1",
	"tenacity==8.2.3",
	"fake-useragent==1.4.0",
	"tqdm==4.66.2",
	"aiohttp==3.9.3",
	"asyncio==3.4.3",
	"streamlit==1.30.0",
	"flask==3.0.0"
]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"