[tool.vercel]
entrypoint = "ui.flask_app:app"

[project]
name = "college-scraper-agent"
version = "0.0.1"
description = "College scraper Flask app"
requires-python = ">=3.11"
dependencies = [
	"flask==3.0.0",
	"requests==2.31.0",
	"beautifulsoup4==4.12.3",
	"lxml==5.1.0",
	"openai==1.12.0",
	"groq==0.4.2",
	"pandas==2.2.1",
	"pydantic==2.6.3",
	"serpapi==0.1.5",
	"python-dotenv==1.0.1",
	"tenacity==8.2.3",
	"fake-useragent==1.4.0"
]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"